<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/get"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="81dp"
        android:layout_marginTop="253dp"
        android:layout_marginEnd="66dp"
        android:onClick="get"
        android:text="GET"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/set"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/set"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="428dp"
        android:onClick="set"
        android:text="SET"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/get"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="39dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="50dp"
        android:text="hey"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set"
        app:layout_constraintVertical_bias="0.45" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="113dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="255dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone"
        android:minHeight="50dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>